<?xml version="1.0"?>
<package>
  <name>test_equipment_drivers</name>
  <version>0.1.0</version>
  <description>Simple drivers for various test equipment  DMMs, Scopes, Supplies etc.. </description>

  <author email="dking@fetchrobotics.com">Derek King</author>
  <maintainer email="dking@fetchrobotics.com">Derek King</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
